# qaltamda

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  sql_app.db
src/: config.py  main.py
src/auth/: __init__.py  models.py  router.py  schemas.py
