[project]
name = "qaltamda"
version = "0.1.0"
description = "Backend for expenses tracker"
authors = [
    {name = "RustemYeldessov",email = "eldesov1997@gmail.com"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.135.2,<0.136.0)",
    "uvicorn (>=0.42.0,<0.43.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
